--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -196,7 +196,7 @@
 
   /* SCROLLBARS */
 
-  --scrollbar-width: 2px;
+  --scrollbar-width: 3px;
 
 
   /* BUTTONS */
